
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_white"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:rotation="-5"
                android:background="@color/green"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="70sp" />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/football"
                android:scaleType="centerInside"
                android:src="@drawable/football2"/>
        </LinearLayout>

        <EditText
            android:id="@+id/et_usernames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/username_hint"
            android:padding="12dp"/>

        <EditText
            android:id="@+id/et_passwords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="12dp"/>

        <Button
            android:id="@+id/btn_logins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_selector"
            android:textStyle="bold"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/tv_registers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_hint"/>
    </LinearLayout>






</LinearLayout>
